# enzyme-platform

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.specify/memory/: constitution.md
app/: api.py  config_loader.py  main.py  models.py
config/: conserved_regions.json  weights.json
dashboard/: app.py
generation/: bionemo_generator.py  interface.py  mock_generator.py
ranking/: weighted.py
scoring/: biological.py  carbon.py  feasibility.py
scripts/: bootstrap.sh  new_feature.sh
specs/001-enzyme-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-enzyme-platform/checklists/: requirements.md
specs/001-enzyme-platform/contracts/: api.md
src/: config.py  database.py  logging_config.py  main.py  models.py
src/enzyme/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  utils.py
src/enzyme/service/: alphafold_client.py  bionemo_client.py  bionemo_generator.py  generator.py  ranking.py
src/enzyme/service/scoring/: biological.py  carbon.py  feasibility.py
templates/feature_scaffold/: .env.example  __init__.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
tests/: conftest.py
tests/unit/: test_alphafold_client.py  test_biological.py  test_bionemo_client.py  test_bionemo_generator.py  test_carbon.py  test_feasibility.py
