[project]
name = "enzyme-platform"
version = "1.0.0"
description = "AI-Designed Carbon-Reducing Enzyme Platform — MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.0",
    "numpy>=1.26,<2.0",
    "pandas==2.2.0",
    "plotly==5.24.0",
    "streamlit==1.42.0",
    "requests>=2.32.3",  # 2.32.0 was yanked (CVE-2024-35195)
]

[dependency-groups]
dev = [
    "pytest==8.3.0",
    "pytest-cov==6.0.0",
]
bionemo = [
    # Phase 2 — BioNeMo inference backend (GPU required)
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
